# PitchSystems

./: .gitignore  README.md  docker-compose.yml  env.example  pyproject.toml
PitchSystems/tests/audio_files/recorded/: short.csv
audio-parser/: .dockerignore  Dockerfile  config.yaml  docker-compose.yml  env.sample  nginx.conf  pyproject.toml  supervisord.conf
audio-parser/audio_parser/: app.py  audio.py  cents.py  gunicorn_conf.py  parser.py  websocket.py
audio-parser/audio_parser/http_cache/: f1e76da382ed4bf9.json
audio-parser/audio_parser/tests/: ess.py  librosa_pyin.py  pd.py  tests.py
audio-parser/audio_parser/tests/audio_files/recorded/: compare.csv  list.csv
pitch-system-api/: env.example  pyproject.toml
pitch-system-api/api/: serializers.py  tests.py  urls.py  views.py
pitch-system-api/fixtures/: interval.json
pitch-system-api/pitch_systems_api/: asgi.py  settings.py  urls.py
pitch-system-api/pitches/: admin.py  models.py  tests.py
pitch-system-api/pitches/migrations/: 0002_alter_interval_ratio_denominator_and_more.py  0003_alter_interval_ratio_denominator_and_more.py  0004_rename_ratio_enumerator_interval_ratio_numerator.py
pitch-system-api/utils/: conversions.py
pitch-systems-api/: Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  env.example  manage.py  pyproject.toml
pitch-systems-api/api/: serializers.py  tests.py  urls.py  views.py
pitch-systems-api/fixtures/: interval.json  intervalname.json  scale.json  system.json
pitch-systems-api/pitch_systems_api/: settings.py  wsgi.py
pitch-systems-api/pitches/: models.py  tests.py
pitch-systems-api/pitches/migrations/: 0001_initial.py  0002_alter_interval_description_and_more.py
pitch-systems-api/tests/: test_models.py  test_utils.py  test_views.py
pitch-systems-api/tests/fixtures/: internames.json  intervals.json  scales.json  systems.json
pitch-systems-api/utils/: __init__.py  conversions.py  formats.py
pitch-systems-frontend/: .env.prod  Dockerfile  env.example  package.json  pnpm-lock.yaml  tailwind.config.ts
pitch-systems-frontend/src/: app.css
pitch-systems-frontend/src/lib/: APITypes.ts  AudioParser.ts  Melody.ts  MelodyLocalStorage.ts  MelodyStore.ts  MelodyUtils.ts  PSClient.ts  examples.ts
pitch-systems-frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte  Analysis.svelte  Frequencies.svelte  Intervals.svelte  Results.svelte  Saved.svelte  Scales.svelte  UploadForm.svelte
pitch-systems-frontend/src/routes/about/: +page.svelte
pitch-systems-frontend/tests/: test-data.js  test-data.ts  unit.test.ts  unit.tests.ts
scripts/: cents  csv2django.py  freq  intervals.json  scales.json  scl2django.py  unicode_convert
tests/audio_files/: .~lock.output.csv#
tests/audio_files/recorded/: list.csv
