[tool.poetry]
name = "pitchsystems"
version = "0.1.0"
description = ""
authors = ["Aonrud <aonrud@fastmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.14"
essentia = "2.1b6.dev1110"
numpy = "<2"
matplotlib = "^3.9.0"
librosa = "^0.10.2.post1"
pitch-detectors = "^0.5.2"
pydantic = "<2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
