[tool.poetry]
name = "audio_parser"
version = "0.1.0"
description = ""
authors = ["Aonrud <aonrud@fastmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
librosa = "^0.10.2.post1"
flask = "^3.0.3"
validators = "^0.33.0"
requests = "^2.32.3"
requests-cache = "^1.2.1"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.1"
websockets = "^12.0"
soundfile = "^0.12.1"
supervisor = "^4.2.5"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.0"
types-requests = "^2.32.0.20240712"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
